# sybil

./: .gitignore  Cargo.toml  README.md  notes.txt
src/: db_utils.rs  http_handler.rs  item.rs  lib.rs  main.rs  ws_handler.rs
website/: package-lock.json
website/public/: index.html
website/src/: App.svelte  items.js
