[package]
name = "sybil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}
tokio = { version = "1.21.1", features = ["full"] }
warp = "0.3.2"
serde_json = "1.0"
futures = { version = "0.3.24", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
futures-util = "0.3.24"
